--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
-    <a href="./index.html">індекс</a>
+    
 </head>
     <body>
         <header class="header">
@@ -17,10 +17,10 @@
             <a class="header-logo logo" href="/index.html" lang="en">Web<span class="logo-header">Studio</span></a>
             <ul class="header-list list">
                 <li class="header-item">
-                    <a class="header-link link" href="">Студія</a>
+                    <a class="header-link link" href="./index.html">Студія</a>
                 </li>
                 <li class="header-item">
-                    <a class="header-link link" href="">Портфоліо</a>
+                    <a class="header-link link" href="./portfolio.html">Портфоліо</a>
                 </li>
                 <li class="header-item">
                     <a class="header-link link" href="">Контакти</a>
