update index html file
update index

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
                     <a class="header-link link" href="./index.html">Студія</a>
                 </li>
                 <li class="header-item">
-                    <a class="header-link link" href="./portfolio.html">Портфоліо</a>
+                    <a class="header-link link" class="caret" href="./portfolio.html">Портфоліо</a>
                 </li>
                 <li class="header-item">
                     <a class="header-link link" href="">Контакти</a>
@@ -40,93 +40,102 @@
             <section class="subject">
                 <h1 class="visually-hidden">Особливості</h1>
                 <ul class="subject-item">
-                    <li class="subject-list list"><button class="hero-btn" type="button">Усі</button></li>
-                    <li class="subject-list list"><button class="hero-btn" type="button">Веб-сайти</button></li>
-                    <li class="subject-list list"><button class="hero-btn" type="button">Додатки</button></li>
-                    <li class="subject-list list"><button class="hero-btn" type="button">Дизайн</button></li>
-                    <li class="subject-list list"><button class="hero-btn" type="button">Маркетинг</button></li>
+                    <li class="subject-list list"><button class="hero-btns" type="button">Усі</button></li>
+                    <li class="subject-list list"><button class="hero-btns" type="button">Веб-сайти</button></li>
+                    <li class="subject-list list"><button class="hero-btns" type="button">Додатки</button></li>
+                    <li class="subject-list list"><button class="hero-btns" type="button">Дизайн</button></li>
+                    <li class="subject-list list"><button class="hero-btns" type="button">Маркетинг</button></li>
                 </ul>
 
                 <ul class="projects-item">
                     <li class="projects-list list">
-                <a class="projects-search link" href=""></a>
+                <a class="projects-search link" href="">
                     <img src="./img/technocrack1.jpg"
                     alt=" Розробка сайту"
                     width="370">
-                    <h3 class="projects-name">Технокряк</h3>
+                    <h2 class="projects-name">Технокряк</h2>
                     <p class="projects-text">Веб-сайт</p>
+                </a>
                 </li>
 
                 <li class="projects-list list">
-                <a class="projects-search link" href=""></a>
+                <a class="projects-search link" href="">
                     <img src="./img/poster2.jpg"
                     alt="Дизайн проект для сайту с постерами"
                     width="370">
-                    <h3 class="projects-name">Постер New Orlean vs Golden Star</h3>
+                    <h2 class="projects-name">Постер New Orlean vs Golden Star</h2>
                     <p class="projects-text">Дизайн</p>
+                </a>
                 </li>
 
                 <li class="projects-list list">
-                <a class="projects-search link" href=""></a>
+                <a class="projects-search link" href="">
                     <img src="./img/restaurant3.jpg"
                     alt="Розробка додатку ресторана"
                     width="370">
-                    <h3 class="projects-name">Ресторан Seafood</h3>
+                    <h2 class="projects-name">Ресторан Seafood</h2>
                     <p class="projects-text">Додаток</p>
+                </a>
                 </li>
 
                 <li class="projects-list list">
-                <a class="projects-search link" href=""></a>
+                <a class="projects-search link" href="">
                     <img src="./img/proect4.jpg"
                     alt="Проєкт "
                     width="370">
-                    <h3 class="projects-name">Проєкт Prime</h3>
+                    <h2 class="projects-name">Проєкт Prime</h2>
                     <p class="projects-text">Маркетинг</p>
+                </a>
                 </li>
 
                 <li class="projects-list list">
-                <a class="projects-search link" href=""></a>
+                <a class="projects-search link" href="">
                     <img src="./img/proeckt5.jpg"
                     alt="Розробка додатку"
                     width="370">
-                    <h3 class="projects-name">Проєкт Boxes</h3>
+                    <h2 class="projects-name">Проєкт Boxes</h2>
                     <p class="projects-text">Додаток</p>
+                </a>
                 </li>
 
                 <li class="projects-list list">
-                <a class="projects-search link" href=""></a>
+                <a class="projects-search link" href="">
                     <img src="./img/veb.saut6.jpg"
                     alt="Розробка сайту"
                     width="370">
-                    <h3 class="projects-name">Inspiration has no Borders</h3>
+                    <h2 class="projects-name">Inspiration has no Borders</h2>
                     <p class="projects-text">Веб-сайт</p>
+                </a>
                 </li>
 
                 <li class="projects-list list">
-                <a class="projects-search link" href=""></a>
+                <a class="projects-search link" href="">
                     <img src="./img/bocks7.jpg"
                     alt="Дизайн проект книг"
                     width="370">
-                    <h3 class="projects-name">Видання Limited Edition</h3>
+                    <h2 class="projects-name">Видання Limited Edition</h2>
                     <p class="projects-text">Дизайн</p>
+                </a>
                 </li>
 
                 <li class="projects-list list">
-                <a class="projects-search link" href=""></a>
+                <a class="projects-search link" href="">
                     <img src="./img/lab8.jpg"
                     alt="Розробка проекта"
                     width="370">
-                    <h3 class="projects-name">Проєкт LAB</h3>
+                    <h2 class="projects-name">Проєкт LAB</h2>
                     <p class="projects-text">Маркетинг</p>
+                </a>
                 </li>
 
                 <li class="projects-list list">
-                <a class="projects-search link" href=""></a>
+                <a class="projects-search link" href="">
                     <img src="./img/business9.jpg"
                     alt="Розробка додатку для бізнесу"
                     width="370">
-                    <h3 class="projects-name">Growing Business</h3>
+                    <h2 class="projects-name">Growing Business</h2>
                     <p class="projects-text">Додаток</p>
+                </a>
                 </li>
                 </ul>
             </section>
