update index html fail

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
                     <a class="header-link link" href="./index.html">Студія</a>
                 </li>
                 <li class="header-item">
-                    <a class="header-link link" class="caret" href="./portfolio.html">Портфоліо</a>
+                    <a class="header-link link-caret-active" href="./portfolio.html">Портфоліо</a>
                 </li>
                 <li class="header-item">
                     <a class="header-link link" href="">Контакти</a>
@@ -40,7 +40,7 @@
             <section class="subject">
                 <h1 class="visually-hidden">Особливості</h1>
                 <ul class="subject-item">
-                    <li class="subject-list list"><button class="hero-btns" type="button">Усі</button></li>
+                    <li class="subject-list list"><button class="hero-btns1" type="button">Усі</button></li>
                     <li class="subject-list list"><button class="hero-btns" type="button">Веб-сайти</button></li>
                     <li class="subject-list list"><button class="hero-btns" type="button">Додатки</button></li>
                     <li class="subject-list list"><button class="hero-btns" type="button">Дизайн</button></li>
