--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a class="header-logo logo" href="/index.html" lang="en">Web<span class="logo-header">Studio</span></a>
         <ul class="header-list list">
             <li class="header-item">
-                <a class="header-link link" href="./index.html">Студія</a>
+                <a class="header-link link-caret-active" href="./index.html">Студія</a>
             </li>
             <li class="header-item">
                 <a class="header-link link" href="./portfolio.html">Портфоліо</a>
